--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,10 @@ h2{
     font-family: var(--default-font-family);
     font-weight: 200;
 }
+
+p{
+    font-family: var(--default-font-family);
+}
 span{
     color: #8dc6ff;
 }
