--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,12 @@ span{
 img{
     background-color: var(--secondary-color);
 }
+
+h4 {
+    font-size: 48px;
+    font-family: var(--default-font-family);
+}
+
 .hero-paragraph {
     font-size: 15px;
     font-family: var(--default-font-family);
@@ -142,6 +148,29 @@ img{
 }
 .weather{
     padding-bottom: 83px;
+}
+
+
+footer .contact-box{
+    background-color: var(--secondary-color);
+    padding: 30px 120px;
+    border-radius: 10px;
+}
+
+footer .email-link {
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+}
+
+footer .social-links a {
+    margin: 0 20px;
+    color: var(--branding-color);
+    background: var(--secondary-color);
+    padding: 10px 14px;
+    border-radius: 50%;
+    font-size: 18px;
+    transition: all 100ms ease-in-out;
 }
 
 @media(max-width: 576px){
